@@ -2,6 +2,7 @@ mp3gain (1.5.2-r2-3) UNRELEASED; urgency=medium
 
   * Update debian/watch to a version by Bart Martens to deal with the upstream
     file-naming convention
+  * Use dpkg-recommended build flags
 
  -- Simon McVittie <smcv@debian.org>  Sun, 19 Jan 2014 00:09:36 +0000
 
